--- a/PARASITOLOGIE_S1.html
+++ b/PARASITOLOGIE_S1.html
@@ -549,7 +549,7 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-title">
                         <div style="text-align: center;">
-                            Introduction à La parasitologie
+                            Introduction à La parasitologie partie 1
                             <div style="color: red; display: block;">GRATUIT</div>
                         </div>
                         <i class="fas fa-chevron-down"></i>
@@ -567,11 +567,11 @@
                     </div>
                 </div>
                 
-                <!-- الفصل 2 - Les organes lymphoïdes -->
+                <!-- الفصل 2 - Introduction à La parasitologie partie 2 -->
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-title">
                         <div style="text-align: center;">
-                            Les organes lymphoïdes
+                            Introduction à La parasitologie partie 2
                         </div>
                         <i class="fas fa-chevron-down"></i>
                     </div>
