--- a/commandez.html
+++ b/commandez.html
@@ -644,7 +644,7 @@
     <section id="commandez" class="hero">
         <div class="container">
             <!-- تم تحويل النص إلى زر دفع -->
-            <a href="https://eccp.poste.dz/" class="order-main-btn" target="_blank">
+            <a href="https://play.google.com/store/apps/details?id=ru.bpc.mobilebank.bpc" class="order-main-btn" target="_blank">
                 Commandez Vos Documents
             </a>
             <p>Choisissez vos documents et payez facilement par BaridiMob.</p>
@@ -765,7 +765,7 @@
         </div>
         
         <!-- زر الطلب الرئيسي في الأسفل - تم تعديل الرابط -->
-        <a href="https://eccp.poste.dz/" class="order-main-btn" target="_blank">
+        <a href="https://play.google.com/store/apps/details?id=ru.bpc.mobilebank.bpc" class="order-main-btn" target="_blank">
             Commandez maintenant
         </a>
     </section>
