--- a/modules.html
+++ b/modules.html
@@ -649,7 +649,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <!-- رسالة التنبيه -->
     <div id="alertMessage" class="alert-message">
-        Désolé, seuls les cours de 4ème année S1 sont disponibles pour le moment.
+        Désolé, seuls les cours de 4ème année S1 et S2 sont disponibles pour le moment.
     </div>
     
     <!-- الشريط العلوي والأزرار الثابتة -->
