--- a/commandez.html
+++ b/commandez.html
@@ -546,7 +546,7 @@
             <a href="https://play.google.com/store/apps/details?id=ru.bpc.mobilebank.bpc" class="order-main-btn" target="_blank">
                 Commandez Vos Documents
             </a>
-            <p>Choisissez vos documents et payez facilement par BaridiMob.</p>
+            <p>Choisissez vos documents et payez facilement par BaridiMob ou Flexy.</p>
             
             <!-- معلومات الدفع المضافة -->
             <div class="payment-info">
@@ -566,7 +566,7 @@
                     </div>
                     <div class="payment-item">
                         <span class="payment-label">FLEXY :</span>
-                        <span class="payment-value">0550-12-34-56</span>
+                        <span class="payment-value">0555079282</span>
                     </div>
                 </div>
             </div>
