--- a/MICROBIOLOGIE_S2.html
+++ b/MICROBIOLOGIE_S2.html
@@ -681,13 +681,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1ZWRE0T5iN6o7G4w5P7f-mRi_6D1wf_8Z/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/15Wdbf0xuBC5vdLmdK7zPy-nwlI5LYnlj/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1wgTjMFfTorzLPuNFrzgMZ10oaHAJL56I/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour1.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -702,13 +702,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1dgSFonIl1x_KI6S30m0u5u66f0sAnzU2/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1RgcE7_vTVZz4fDvHL1PVWjq2kzDQ5-6_/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1soblsZvCzAClhwjJHtFgOI5FK9yuzzJn/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour2.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -723,13 +723,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1ZJej6NkH7W33IFPHvT5EMXnhl0o135Cx/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1FUlmNPDcqObtZdhLOwJoqe0BMk7RcT8b/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1bdLKPUt2J6MSUyt6hAASYWlG38yrbfcP/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour3.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -744,13 +744,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1ZJej6NkH7W33IFPHvT5EMXnhl0o135Cx/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1FUlmNPDcqObtZdhLOwJoqe0BMk7RcT8b/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1UMJ8ovGT_-xTo6yYbdUKtYZuv9Rr1v1x/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour4.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -765,13 +765,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1ZJej6NkH7W33IFPHvT5EMXnhl0o135Cx/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1FUlmNPDcqObtZdhLOwJoqe0BMk7RcT8b/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1Ia40-webdHMHNOjqtiiXYjLuiNO5tlcJ/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour5.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -786,13 +786,13 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1ZJej6NkH7W33IFPHvT5EMXnhl0o135Cx/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1FUlmNPDcqObtZdhLOwJoqe0BMk7RcT8b/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1gDoAAviGPRoo4aX6QeQ8LlqYt3QiIDPo/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_Examen_de_cour6.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -802,7 +802,7 @@
         
         <!-- قسم زر الامتحان النهائي -->
         <div class="module-exam-container">
-            <button class="module-exam-btn" onclick="window.location.href='Examen_Microbiologie.html'">
+            <button class="module-exam-btn" onclick="window.location.href='#'">
                 <i class="fas fa-file-alt"></i> Examen de module
             </button>
         </div>
