--- a/MICROBIOLOGIE_S2.html
+++ b/MICROBIOLOGIE_S2.html
@@ -695,6 +695,7 @@
                 
                 <!-- الفصل 2 -->
                 <div class="chapter-card" onclick="toggleChapter(this)">
+                    <div class="free-badge">GRATUIT</div>
                     <div class="chapter-content">
                         <div class="chapter-title">
                             LES NEISSERIACEAE
