--- a/MICROBIOLOGIE_S2.html
+++ b/MICROBIOLOGIE_S2.html
@@ -687,7 +687,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1wgTjMFfTorzLPuNFrzgMZ10oaHAJL56I/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour1.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
