--- a/MICROBIOLOGIE_S2.html
+++ b/MICROBIOLOGIE_S2.html
@@ -709,7 +709,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1soblsZvCzAClhwjJHtFgOI5FK9yuzzJn/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour2.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -730,7 +730,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1bdLKPUt2J6MSUyt6hAASYWlG38yrbfcP/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour3.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -751,7 +751,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1UMJ8ovGT_-xTo6yYbdUKtYZuv9Rr1v1x/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour4-1.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -772,7 +772,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1Ia40-webdHMHNOjqtiiXYjLuiNO5tlcJ/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour4-2.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
@@ -793,7 +793,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1gDoAAviGPRoo4aX6QeQ8LlqYt3QiIDPo/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='#'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour5.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
