--- a/commandez.html
+++ b/commandez.html
@@ -588,7 +588,7 @@
                         </tr>
                         <tr>
                             <td class="offer-name">Examens</td>
-                            <td class="free-price">Gratuit</td>
+                            <td class="free-price">25 DA</td>
                         </tr>
                     </tbody>
                 </table>
