--- a/commandez.html
+++ b/commandez.html
@@ -590,6 +590,14 @@
                             <td class="offer-name">Examens</td>
                             <td class="free-price">25 DA</td>
                         </tr>
+                        <tr>
+                            <td class="offer-name">PDF</td>
+                            <td class="free-price">GRATUIT</td>
+                        </tr>
+                        <tr>
+                            <td class="offer-name">Les 2 premier cours</td>
+                            <td class="free-price">GRATUIT</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
