--- a/commandez.html
+++ b/commandez.html
@@ -595,7 +595,7 @@
                             <td class="free-price">GRATUIT</td>
                         </tr>
                         <tr>
-                            <td class="offer-name">Les 2 premier cours</td>
+                            <td class="offer-name">Les 2 premiers cours</td>
                             <td class="free-price">GRATUIT</td>
                         </tr>
                     </tbody>
