--- a/commandez.html
+++ b/commandez.html
@@ -587,8 +587,8 @@
                             <td class="price">50 DA</td>
                         </tr>
                         <tr>
-                            <td class="offer-name">Examens</td>
-                            <td class="free-price">25 DA</td>
+                            <td class="offer-name">Examen unique</td>
+                            <td class="free-price">15 DA</td>
                         </tr>
                         <tr>
                             <td class="offer-name">PDF</td>
