--- a/MICROBIOLOGIE_S2_ Examen_de_cour2.html
+++ b/MICROBIOLOGIE_S2_ Examen_de_cour2.html
@@ -732,7 +732,7 @@
     <!-- المحتوى الرئيسي -->
     <div class="main-content">
         <div class="exam-header">
-            <h1 class="exam-title">Examen de : LES NEISSERIACEAE</h1>
+            <h1 class="exam-title">QCM de : LES NEISSERIACEAE</h1>
             <div class="exam-description">
                 Test QCM sur les Neisseriaceae - Microbiologie médicale. L'examen se compose de 15 questions. Vous avez 45 minutes pour répondre à toutes les questions.
             </div>
