--- a/MICROBIOLOGIE_S2_ Examen_de_cour4-1.html
+++ b/MICROBIOLOGIE_S2_ Examen_de_cour4-1.html
@@ -732,7 +732,7 @@
     <!-- المحتوى الرئيسي -->
     <div class="main-content">
         <div class="exam-header">
-            <h1 class="exam-title">QCM Microbiologie : EXAMEN CYTO-BACTERIOLOGIQUE DES URINES</h1>
+            <h1 class="exam-title">QCM de : EXAMEN CYTO-BACTERIOLOGIQUE DES URINES</h1>
             <div class="exam-description">
                 QCM sur l'examen cyto-bactériologique des urines (ECBU) - Infections urinaires. L'examen se compose de 15 questions. Vous avez 45 minutes pour répondre à toutes les questions.
             </div>
