--- a/MICROBIOLOGIE_S2_ Examen_de_cour5.html
+++ b/MICROBIOLOGIE_S2_ Examen_de_cour5.html
@@ -732,7 +732,7 @@
     <!-- المحتوى الرئيسي -->
     <div class="main-content">
         <div class="exam-header">
-            <h1 class="exam-title">QCM Microbiologie : EXAMEN CYTOBACTERIOLOGIQUE DU LIQUIDE CEREBROSPINAL</h1>
+            <h1 class="exam-title">QCM de : EXAMEN CYTOBACTERIOLOGIQUE DU LIQUIDE CEREBROSPINAL</h1>
             <div class="exam-description">
                 QCM sur l'examen cyto-bactériologique du liquide céphalo-rachidien (LCR) - Méningites. L'examen se compose de 15 questions. Vous avez 45 minutes pour répondre à toutes les questions.
             </div>
