--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -684,7 +684,7 @@
                         <button class="resource-btn pdf-btn" onclick="window.open('xxxxxxxxxxxxxxxxxx', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1VeZhJ8jm_OG6huo1Q_Ep3q1dy7H7Q1KU/view?usp=drivesdk', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1VeZhJ8jm_OG6huo1Q_Ep3q1dy7H7Q1KU/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='HEMOBIOLOGIE_S2_Examen_de_cour1.html'">
