--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -692,6 +692,28 @@
                         </button>
                     </div>
                 </div>
+            
+            <!-- الفصل 2 -->
+                <div class="chapter-card" onclick="toggleChapter(this)">
+                    <div class="free-badge">GRATUIT</div>
+                    <div class="chapter-content">
+                        <div class="chapter-title">
+                            Leucémies aigues
+                            <i class="fas fa-chevron-down chapter-icon"></i>
+                        </div>
+                    </div>
+                    <div class="resources-options">
+                        <button class="resource-btn pdf-btn" onclick="window.open('xxxxxxxxxxxxxxxxxx', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-file-pdf"></i> PDF
+                        </button>
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1VeZhJ8jm_OG6huo1Q_Ep3q1dy7H7Q1KU/view?usp=sharing', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-video"></i> VIDÉO
+                        </button>
+                        <button class="resource-btn exam-btn" onclick="window.location.href='HEMOBIOLOGIE_S2_Examen_de_cour2.html'">
+                            <i class="fas fa-clipboard-list"></i> EXAMEN
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         
