--- a/MICROBIOLOGIE_S2.html
+++ b/MICROBIOLOGIE_S2.html
@@ -676,12 +676,12 @@
                     <div class="free-badge">GRATUIT</div>
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            LES STREPTOCOQUES
+                            Les streptocoques
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/15oRkvSkXGXljdLWFC2qdd9poMpO_Wv4S/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1wgTjMFfTorzLPuNFrzgMZ10oaHAJL56I/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -698,12 +698,12 @@
                     <div class="free-badge">GRATUIT</div>
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            LES NEISSERIACEAE
+                            Les neisseriaceae
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/1aVEdK6ivXsVhS-BN__4RagIXonUl0mhj/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1soblsZvCzAClhwjJHtFgOI5FK9yuzzJn/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -719,12 +719,12 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            LISTERIA ET CORYNEBACTERIUM
+                            Listeria et corynebacterium
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/1Dtc7iMYSp0fcwe5mSGMk_pzH1ABqtzTQ/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1bdLKPUt2J6MSUyt6hAASYWlG38yrbfcP/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -740,12 +740,12 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            EXAMEN CYTO-BACTERIOLOGIQUE DES URINES PARTIE 1
+                            Examen cyto-bacteriologique des urines partie 1
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/1s9STLImx9SD4bxTA3e0ulgPTzEtjXG1E/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1UMJ8ovGT_-xTo6yYbdUKtYZuv9Rr1v1x/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -761,12 +761,12 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            EXAMEN CYTO-BACTERIOLOGIQUE DES URINES PARTIE 2
+                            Examen cyto-bacteriologique des urines partie 2
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/1s9STLImx9SD4bxTA3e0ulgPTzEtjXG1E/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1Ia40-webdHMHNOjqtiiXYjLuiNO5tlcJ/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -782,12 +782,12 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            EXAMEN CYTOBACTERIOLOGIQUE DU LIQUIDE CEREBROSPINAL
+                            Examen cytobacteriologique du liquide cerebrospinal
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://docs.google.com/presentation/d/1P-dcyB_zkqe0iY-eZp6YDVCsnAKfxlFQ/edit?usp=sharing&ouid=102955304436687628598&rtpof=true&sd=true', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1gDoAAviGPRoo4aX6QeQ8LlqYt3QiIDPo/view?usp=sharing', '_blank'); event.stopPropagation();">
