--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -676,12 +676,12 @@
                     <div class="free-badge">GRATUIT</div>
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            LES ANOMALIES BENIGNES DE LA LIGNEE LEUCOCYTAIRE
+                            Les anomalies benignes de la lignee leucocytaire
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('xxxxxxxxxxxxxxxxxx', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1R2NsIv08S-pEUGK9QTeBC0VK7-zc4OY7/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1VeZhJ8jm_OG6huo1Q_Ep3q1dy7H7Q1KU/view?usp=sharing', '_blank'); event.stopPropagation();">
@@ -703,7 +703,7 @@
                         </div>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('xxxxxxxxxxxxxxxxxx', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1W_FH-Pb5TWmeQnroriNgbNMTjR51tQdw/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1VeZhJ8jm_OG6huo1Q_Ep3q1dy7H7Q1KU/view?usp=sharing', '_blank'); event.stopPropagation();">
