--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -714,6 +714,27 @@
                         </button>
                     </div>
                 </div>
+            
+            <!-- الفصل 3 -->
+                <div class="chapter-card" onclick="toggleChapter(this)">
+                    <div class="chapter-content">
+                        <div class="chapter-title">
+                            Listeria et corynebacterium
+                            <i class="fas fa-chevron-down chapter-icon"></i>
+                        </div>
+                    </div>
+                    <div class="resources-options">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1uQY5RnIYkgeQWWyyRIWNklFHqAUDJ1P-/view?usp=sharing', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-file-pdf"></i> PDF
+                        </button>
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1bdLKPUt2J6MSUyt6hAASYWlG38yrbfcP/view?usp=sharing', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-video"></i> VIDÉO
+                        </button>
+                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour3.html'">
+                            <i class="fas fa-clipboard-list"></i> EXAMEN
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         
