--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -719,7 +719,7 @@
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-content">
                         <div class="chapter-title">
-                            Listeria et corynebacterium
+                            La Leucémie Lymphoïde Chronique
                             <i class="fas fa-chevron-down chapter-icon"></i>
                         </div>
                     </div>
