--- a/HEMOBIOLOGIE_S2.html
+++ b/HEMOBIOLOGIE_S2.html
@@ -730,7 +730,7 @@
                         <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1bdLKPUt2J6MSUyt6hAASYWlG38yrbfcP/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
-                        <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S2_ Examen_de_cour3.html'">
+                        <button class="resource-btn exam-btn" onclick="window.location.href='HEMOBIOLOGIE_S2_Examen_de_cour3.html'">
                             <i class="fas fa-clipboard-list"></i> EXAMEN
                         </button>
                     </div>
